Single build/test pass
With the extra org.eclipse.jdt.core.tests.javac defining the
supplemental tests to run with Javac.