@@ -13,7 +13,7 @@ pipeline {
 		jdk 'openjdk-jdk24-latest'
 	}
 	stages {
-		stage('Build and Test using ECJ') {
+		stage('Build and Test') {
 			steps {
 					sh """#!/bin/bash -x
 					
@@ -57,39 +57,6 @@ pipeline {
 					junit '**/target/surefire-reports/*.xml'
 					//discoverGitReferenceBuild referenceJob: 'eclipse.jdt.core-github/master'
 					//recordIssues publishAllIssues:false, ignoreQualityGate:true, tool: eclipse(name: 'Compiler and API Tools', pattern: '**/target/compilelogs/*.xml'), qualityGates: [[threshold: 1, type: 'DELTA', unstable: true]]
-				}
-			}
-		}
-		stage("Build and Test with DOM-first") {
-			steps {
-				sh """
-				# Then enable DOM-first
-				sed -i 's|</argLine>| -DCompilationUnit.DOM_BASED_OPERATIONS=true -DSourceIndexer.DOM_BASED_INDEXER=false -DICompilationUnitResolver=org.eclipse.jdt.core.dom.JavacCompilationUnitResolver -DAbstractImageBuilder.compiler=org.eclipse.jdt.internal.javac.JavacCompiler_</argLine>|g' */pom.xml
-				# and build/run it
-				mvn -U clean verify --batch-mode --fail-at-end -Dmaven.repo.local=$WORKSPACE/.m2/repository \
-					-Ptest-on-javase-22 -Pbree-libs -Papi-check -Pjavadoc -Pp2-repo \
-					-Dmaven.test.failure.ignore=true \
-					-Dcompare-version-with-baselines.skip=false \
-					-Djava.io.tmpdir=$WORKSPACE/tmp -Dproject.build.sourceEncoding=UTF-8 \
-					-Dtycho.surefire.argLine="--add-modules ALL-SYSTEM -Dcompliance=1.8,11,17,21,22 -Djdt.performance.asserts=disabled -DCompilationUnit.DOM_BASED_OPERATIONS=true -DSourceIndexer.DOM_BASED_INDEXER=false -DICompilationUnitResolver=org.eclipse.jdt.core.dom.JavacCompilationUnitResolver -DAbstractImageBuilder.compiler=org.eclipse.jdt.internal.javac.JavacCompiler_ " \
-					-Dtycho.surefire.error=ignore -Dtycho.surefire.failure=ignore \
-					-DDetectVMInstallationsJob.disabled=true \
-					-Dtycho.apitools.debug \
-					-Dcbi-ecj-version=99.99
-				"""
-			}
-			post {
-				always {
-					archiveArtifacts artifacts: '*.log,*/target/work/data/.metadata/*.log,*/tests/target/work/data/.metadata/*.log,apiAnalyzer-workspace/.metadata/*.log,repository/target/repository/**', allowEmptyArchive: true
-					// The following lines use the newest build on master that did not fail a reference
-					// To not fail master build on failed test maven needs to be started with "-Dmaven.test.failure.ignore=true" it will then only marked unstable.
-					// To not fail the build also "unstable: true" is used to only mark the build unstable instead of failing when qualityGates are missed
-					// Also do not record mavenConsole() as failing tests are logged with ERROR duplicating the failure into the "Maven" plugin
-					// To accept unstable builds (test errors or new warnings introduced by third party changes) as reference using "ignoreQualityGate:true"
-					// To only show warnings related to the PR on a PR using "publishAllIssues:false"
-					// The eclipse compiler name is changed because the logfile not only contains ECJ but also API warnings.
-					// "pattern:" is used to collect warnings in dedicated files avoiding output of junit tests treated as warnings   
-					junit '**/target/surefire-reports/*.xml'
 				}
 			}
 		}
